-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
None
-
6.4.0 FF
-
None
qt-testrunner.py ERROR: The test executable CRASHed uncontrollably! Details about where we caught the problem: agent:2022/03/25 03:35:14 build.go:394: 18: Traceback (most recent call last): agent:2022/03/25 03:35:14 build.go:394: 18: File "/Users/qt/work/install/libexec/qt-testrunner.py", line 348, in main agent:2022/03/25 03:35:14 build.go:394: 18: failed_functions = parse_log(results_file) agent:2022/03/25 03:35:14 build.go:394: 18: File "/Users/qt/work/install/libexec/qt-testrunner.py", line 206, in parse_log agent:2022/03/25 03:35:14 build.go:394: 18: tree = ET.parse(results_file) agent:2022/03/25 03:35:14 build.go:394: 18: File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/xml/etree/ElementTree.py", line 1229, in parse agent:2022/03/25 03:35:14 build.go:394: 18: tree.parse(source, parser) agent:2022/03/25 03:35:14 build.go:394: 18: File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/xml/etree/ElementTree.py", line 580, in parse agent:2022/03/25 03:35:14 build.go:394: 18: self._root = parser._parse_whole(source) agent:2022/03/25 03:35:14 build.go:394: 18: xml.etree.ElementTree.ParseError: no element found: line 340, column 0 agent:2022/03/25 03:35:14 build.go:394: 18: qt-testrunner.py ERROR: Full test run failed repeatedly, aborting! agent:2022/03/25 03:35:14 build.go:394: 18: [2275:259:0325/033514.148595:ERROR:mach_port_rendezvous.cc(310)] bootstrap_look_up org.chromium.Chromium.MachPortRendezvousServer.1: Permission denied (1100) agent:2022/03/25 03:35:14 build.go:394: 18: [2275:259:0325/033514.148644:ERROR:child_thread_impl.cc(224)] Mach rendezvous failed, terminating process (parent died?) agent:2022/03/25 03:35:14 build.go:394: 18: CMake Error at tst_qwebenginepageWrapperRelWithDebInfo.cmake:17 (message): agent:2022/03/25 03:35:14 build.go:394: 18: /Users/qt/work/install/libexec/qt-testrunner.py -- agent:2022/03/25 03:35:14 build.go:394: 18: /Users/qt/work/qt/qtwebengine_standalone_tests/tests/auto/widgets/qwebenginepage/tst_qwebenginepage agent:2022/03/25 03:35:14 build.go:394: 18: execution failed with exit code 3. agent:2022/03/25 03:35:14 build.go:394: 18: agent:2022/03/25 03:35:14 build.go:394: 18: agent:2022/03/25 03:35:14 build.go:394: 18/37 Test #18: tst_qwebenginepage ........................***Failed 63.90 sec
Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1648176448
Tested changes (refs/builds/qtci/dev/1648176446):
https://codereview.qt-project.org/c/qt/qtwebengine/+/402001/2 Update dependencies on 'dev' in qt/qtwebengine
For Gerrit Dashboard: QTBUG-102030 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
402662,7 | Try to adapt to new QQuickWidget | dev | qt/qtwebengine | Status: ABANDONED | -1 | 0 |
402940,4 | Fix heap-use-after-free with rhi-based backingstore | dev | qt/qtbase | Status: MERGED | -1 | 0 |
402944,5 | Query the QWindow in every test iteration in qWFWExposed(QWidget) | dev | qt/qtbase | Status: MERGED | -1 | 0 |
402989,4 | rendercontrol: Correctly adopt a changed external QRhi upon reinit | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |